Updated all deploy scripts to push to S3

--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "asar": "^0.12.1",
     "autoprefixer": "^6.3.7",
     "awesome-typescript-loader": "2.2.4",
+    "aws-sdk": "^2.6.9",
     "aws-sdk-typescript": "github:densebrain/aws-sdk-typescript#v0.0.4",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.1",
@@ -168,6 +169,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "faker": "^3.1.0",
     "file-loader": "^0.8.5",
+    "glob-promise": "^1.0.6",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-debug": "^2.1.2",
