--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     },
     "mac": {
       "identity": "Densebrain, Inc",
-      "icon": "build/icon.icns"
+      "icon": "build/icon.icns",
+      "target": ["dmg","zip"]
     },
     "extraFiles": [
       "build/**/*"
@@ -215,7 +216,7 @@
     "run-sequence": "^1.1.5",
     "sass-loader": "^4.0.0",
     "script-loader": "^0.7.0",
-    "semver": "^5.1.0",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.0",
     "simple-assign": "^0.1.0",
     "sinon": "^1.17.4",
