--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "AN electron app for dealing with those darn git issues",
   "main": "dist/app/bin/epictask-start.js",
   "scripts": {
-    
     "clean": "node ./etc/scripts/clean.js",
     "clean-electron-workspace": "node ./etc/scripts/clean-dev-electron.js",
     "test": "gulp compile test",
@@ -12,18 +11,14 @@
     "start": "./node_modules/.bin/cross-env HOT=1 NODE_ENV=development ./node_modules/.bin/electron ./bin/epictask-start.js",
     "postinstall": "node ./etc/scripts/post-install.js",
     "compile": "gulp compile",
-    "compile-watch": "node ./etc/scripts/compile-watch.js",
+    "compile-watch": "babel-node ./etc/scripts/compile-watch.js",
     "package": "babel-node ./etc/scripts/package.js",
-    "package-all": "node ./etc/scripts/package.js --win --linux",
-    
-    "make-icons": "node ./etc/scripts/make-icons.js",
-  
+    "package-all": "babel-node ./etc/scripts/package.js --win --linux",
+    "make-icons": "babel-node ./etc/scripts/make-icons.js",
     "install-material-ui": "npm i material-ui@../material-ui/build",
-    "install-app": "node ./etc/scripts/package.js --install",
-    
+    "install-app": "babel-node ./etc/scripts/package.js --install",
     "storybook": "./etc/scripts/configure-dev-env.sh && start-storybook -s ./ -p 6006",
     "build-storybook": "build-storybook"
-    
   },
   "build": {
     "appId": "com.densebrain.epictask",
@@ -166,7 +161,7 @@
     "electron-builder": "^7.11.2",
     "electron-debug": "^1.0.1",
     "electron-devtools-installer": "^2.0.0",
-    "electron-prebuilt": "1.3.5",
+    "electron": "1.4.3",
     "eslint": "^3.2.2",
     "expectations": "^0.5.2",
     "exports-loader": "^0.6.3",
@@ -241,6 +236,7 @@
     "webpack-stream": "^3.2.0"
   },
   "dependencies": {
+    "@exponent/electron-cookies": "^2.0.0",
     "animate.css": "^3.5.1",
     "app-module-path": "^1.0.6",
     "babel-polyfill": "^6.8.0",
