Native notifications are now in
Creating a build - if it works - hell hath no fury like what I'm about to do

--- a/package.json
+++ b/package.json
@@ -57,11 +57,7 @@
       "build/**/*"
     ],
     "files": [
-      "build/**/*",
-      "etc/packages/**/*",
-      "dist/app/**/*",
-      "package.json",
-      "node_modules/**/*",
+      "**/*",
       "!**/node_modules/*/{README.md,README,readme.md,readme,test}",
       "!**/node_modules/.bin",
       "!**/*.{o,hprof,orig,pyc,pyo,rbc}",
@@ -70,7 +66,7 @@
     ]
   },
   "directories": {
-    "app": ".",
+    "app": "dist/app",
     "buildResources": "build",
     "output": "dist/build"
   },
@@ -85,9 +81,7 @@
       }
     }
   },
-  "bin": {
-    "electron": "./node_modules/.bin/electron"
-  },
+  
   "browser": {
     "vertx": false
   },
@@ -100,7 +94,7 @@
     "name": "Densebrain, Inc",
     "url": "http://densebrain.com"
   },
-  "license": "MIT",
+  
   "devDependencies": {
     "@kadira/storybook": "^2.5.2",
     "@types/electron": "^1.3.20",
@@ -155,6 +149,7 @@
     "concurrently": "^2.1.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
+    "debug": "^2.2.0",
     "debug-menu": "^0.4.0",
     "del": "^2.2.0",
     "devtron": "^1.3.0",
@@ -198,10 +193,12 @@
     "postcss-js": "^0.1.3",
     "postcss-loader": "^0.9.1",
     "postcss-modules": "^0.5.0",
+    "pug": ">=2.0.0-beta6",
     "pug-html-loader": "^1.0.8",
     "pug-loader": "^2.3.0",
     "raw-loader": "^0.5.1",
     "react-addons-perf": "15.3.0",
+    "react-addons-test-utils": "^15.3.0",
     "react-hot-loader": "^3.0.0-beta.3",
     "react-transform-hmr": "^1.0.4",
     "reactotron-react-js": "^1.0.0",
@@ -211,8 +208,11 @@
     "redux-devtools-inspector": "^0.5.1",
     "redux-devtools-log-monitor": "^1.0.11",
     "redux-logger": "^2.6.1",
+    
     "redux-slider-monitor": "^1.0.5",
+    "remote-redux-devtools": "^0.3.3",
     "run-sequence": "^1.1.5",
+    "warning": "^3.0.0",
     "sass-loader": "^4.0.0",
     "script-loader": "^0.7.0",
     "semver": "^5.3.0",
@@ -225,6 +225,7 @@
     "ts-node": "^0.9.3",
     "tslint": "^3.13.0",
     "typescript": "2.1.0-dev.20160914",
+    "typestore-mocks": "^0.2.10",
     "url-loader": "^0.5.7",
     "vinyl-named": "^1.1.0",
     "webpack": "^2.1.0-beta.25",
@@ -236,99 +237,5 @@
     "webpack-stream": "^3.2.0"
   },
   "dependencies": {
-    "@exponent/electron-cookies": "^2.0.0",
-    "animate.css": "^3.5.1",
-    "app-module-path": "^1.0.6",
-    "babel-polyfill": "^6.8.0",
-    "babel-runtime": "^6.11.6",
-    "bluebird": "^3.4.0",
-    "browser-assert": "^1.2.1",
-    "browser-next-tick": "^1.1.0",
-    "client-oauth2": "^2.2.0",
-    "commander": "^2.9.0",
-    "css-modules-require-hook": "^4.0.0",
-    "dataurl": "^0.1.0",
-    "debug": "^2.2.0",
-    "electron-is-dev": "^0.1.1",
-    "electron-require": "^0.3.0",
-    "electron-window-state": "^3.0.3",
-    "events": "^1.1.1",
-    "font-awesome": "^4.6.3",
-    "form-data": "^1.0.0-rc4",
-    "free-style": "^1.2.2",
-    "glob": "^7.0.3",
-    "gsap": "^1.19.0",
-    "highlight.js": "^9.4.0",
-    "immutable": "^3.8.1",
-    "inline-style-prefixer": "^2.0.1",
-    "jquery": "^2.2.4",
-    "keycode": "^2.1.4",
-    "later": "^1.2.0",
-    "lodash": "^4.12.0",
-    "lodash-decorators": "^3.0.1",
-    "material-ui": "../material-ui/build",
-    "mkdirp": "^0.5.1",
-    "moment": "^2.13.0",
-    "node-fetch": "^1.5.3",
-    "node-ipc": "^8.1.0",
-    "node-uuid": "^1.4.7",
-    "pug": ">=2.0.0-beta6",
-    "radium": "^0.18.1",
-    "react": "15.3.0",
-    "react-addons-create-fragment": "15.3.0",
-    "react-addons-css-transition-group": "15.3.0",
-    "react-addons-pure-render-mixin": "15.3.0",
-    "react-addons-shallow-compare": "15.3.0",
-    "react-addons-test-utils": "^15.3.0",
-    "react-addons-transition-group": "15.3.0",
-    "react-animate.css": "0.0.4",
-    "react-component-resizable": "1.0.0",
-    "react-css-modules": "^3.7.6",
-    "react-deep-force-update": "^2.0.1",
-    "react-dnd": "^2.1.4",
-    "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "15.3.0",
-    "react-event-listener": "^0.2.1",
-    "react-hotkeys": "^0.8.0",
-    "react-ink": "^5.1.1",
-    "react-list": "^0.7.18",
-    "react-markdown": "densebrain/react-markdown",
-    "react-modal": "^1.4.0",
-    "react-prefixer": "^1.1.4",
-    "react-proxy": "^2.0.8",
-    "react-redux": "^4.4.5",
-    "react-simplemde-editor": "=3.0.0",
-    "react-split-pane": "^0.1.44",
-    "react-tap-event-plugin": "^1.0.0",
-    "react-textfit": "^0.1.8",
-    "react-timeout": "^1.0.0",
-    "react-valid-props": "^1.0.10",
-    "recompose": "^0.20.2",
-    "redux": "^3.5.2",
-    "redux-logger": "^2.6.1",
-    "redux-thunk": "^2.1.0",
-    "reflect-metadata": "^0.1.8",
-    "remote-redux-devtools": "^0.3.3",
-    "reselect": "^2.5.3",
-    "run-sequence": "^1.1.5",
-    "semver": "^5.1.0",
-    "shelljs": "^0.7.0",
-    "short-id": "0.1.0-1",
-    "simplemde": "^1.10.1",
-    "sinon": "^1.17.4",
-    "source-map-support": "^0.4.0",
-    "stacktrace-js": "^1.3.1",
-    "through2": "^2.0.1",
-    "tinycolor2": "^1.3.0",
-    "typedux": ">=0.1.8",
-    "typelogger": ">=1.0.25",
-    "typescript-ioc": "^0.2.3",
-    "typestore": "^0.2.10",
-    "typestore-mocks": "^0.2.10",
-    "typestore-plugin-pouchdb": "^0.2.10",
-    "urlsearchparams": "densebrain/URLSearchParams",
-    "utf8-encoding": "^0.1.2",
-    "warning": "^3.0.0",
-    "winston": "^2.2.0"
   }
 }
