--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "epictask",
   "version": "0.1.23",
   "description": "AN electron app for dealing with those darn git issues",
-  "main": "dist/app/bin/epictask-start.js",
+  "main": "bin/epictask-start.js",
   "scripts": {
     "clean": "node ./etc/scripts/clean.js",
     "clean-electron-workspace": "node ./etc/scripts/clean-dev-electron.js",
@@ -233,5 +233,86 @@
     "webpack-node-externals": "^1.2.0",
     "webpack-stream": "^3.2.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@exponent/electron-cookies": "^2.0.0",
+    "animate.css": "^3.5.1",
+    "babel-polyfill": "^6.8.0",
+    "babel-runtime": "^6.11.6",
+    "bluebird": "^3.4.0",
+    
+    
+    "css-modules-require-hook": "^4.0.0",
+    "dataurl": "^0.1.0",
+    
+    "electron-require": "^0.3.0",
+    "electron-window-state": "^3.0.3",
+    "events": "^1.1.1",
+    "font-awesome": "^4.6.3",
+    "form-data": "^1.0.0-rc4",
+    "free-style": "^1.2.2",
+    "glob": "^7.0.3",
+    "gsap": "^1.19.0",
+    "highlight.js": "^9.4.0",
+    "immutable": "^3.8.1",
+    "jquery": "^2.2.4",
+    "later": "^1.2.0",
+    "lodash": "^4.12.0",
+    "lodash-decorators": "^3.0.1",
+    "material-ui": "../../../material-ui/build",
+    "mkdirp": "^0.5.1",
+    "moment": "^2.13.0",
+    "node-fetch": "^1.5.3",
+    "node-ipc": "^8.1.0",
+    "node-uuid": "^1.4.7",
+    "radium": "^0.18.1",
+    "react": "15.3.0",
+    "react-addons-create-fragment": "15.3.0",
+    "react-addons-css-transition-group": "15.3.0",
+    "react-addons-pure-render-mixin": "15.3.0",
+    "react-addons-shallow-compare": "15.3.0",
+    
+    "react-addons-transition-group": "15.3.0",
+    "react-animate.css": "0.0.4",
+    "react-component-resizable": "1.0.0",
+    
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
+    "react-dom": "15.3.0",
+    "react-ink": "^5.1.1",
+    
+    "react-markdown": "densebrain/react-markdown",
+    "react-proxy": "^2.0.8",
+    "react-redux": "^4.4.5",
+    "react-simplemde-editor": "=3.0.0",
+    "react-split-pane": "^0.1.44",
+    "react-tap-event-plugin": "^1.0.0",
+    "react-textfit": "^0.1.8",
+    "react-timeout": "^1.0.0",
+    "react-valid-props": "^1.0.10",
+    "recompose": "^0.20.2",
+    "redux": "^3.5.2",
+    
+    "redux-thunk": "^2.1.0",
+    "reflect-metadata": "^0.1.8",
+    
+    "reselect": "^2.5.3",
+    "shelljs": "^0.7.0",
+    "short-id": "0.1.0-1",
+    "simplemde": "^1.10.1",
+    "sinon": "^1.17.4",
+    "source-map-support": "^0.4.0",
+    "stacktrace-js": "^1.3.1",
+    
+    "tinycolor2": "^1.3.0",
+    "typedux": ">=0.1.8",
+    "typelogger": ">=1.0.25",
+    "typescript-ioc": "^0.2.3",
+    "typestore": "^0.2.10",
+    
+    "typestore-plugin-pouchdb": "^0.2.10",
+    "urlsearchparams": "densebrain/URLSearchParams",
+    "utf8-encoding": "^0.1.2",
+    
+    "winston": "^2.2.0"
+  }
 }
