--- a/package.json
+++ b/package.json
@@ -255,7 +255,7 @@
     "later": "^1.2.0",
     "lodash": "^4.12.0",
     "lodash-decorators": "^3.0.1",
-    "material-ui": "../material-ui/build",
+    "material-ui": "https://github.com/densebrain/material-ui/releases/download/latest/densebrain-material-ui-latest.tgz",
     "mkdirp": "^0.5.1",
     "moment": "^2.13.0",
     "node-fetch": "^1.5.3",
