--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test-watch": "gulp compile-watch",
     "start": "./node_modules/.bin/cross-env HOT=1 NODE_ENV=development ./node_modules/.bin/electron ./bin/epictask-start.js",
     "postinstall": "node ./etc/scripts/post-install.js",
+  
+    "tsc-watch": "./node_modules/.bin/tsc --project tsconfig.json --watch",
     "compile": "gulp compile",
     "compile-watch": "babel-node ./etc/scripts/compile-watch.js",
     "package": "babel-node ./etc/scripts/package.js",
@@ -145,6 +147,7 @@
     "chromedriver": "^2.21.2",
     "commander": "^2.9.0",
     "concurrently": "^2.1.0",
+    "copy-webpack-plugin": "^4.0.0",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.1",
     "debug": "^2.2.0",
@@ -241,7 +244,6 @@
     "bluebird": "^3.4.0",
     "css-modules-require-hook": "^4.0.0",
     "dataurl": "^0.1.0",
-    "electron-require": "^0.3.0",
     "electron-window-state": "^3.0.3",
     "events": "^1.1.1",
     "font-awesome": "^4.6.3",
@@ -254,7 +256,6 @@
     "jquery": "^2.2.4",
     "later": "^1.2.0",
     "lodash": "^4.12.0",
-    
     "material-ui": "https://github.com/densebrain/material-ui/releases/download/latest/densebrain-material-ui-latest.tgz",
     "mkdirp": "^0.5.1",
     "moment": "^2.13.0",
