--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "ES6",
+        "target": "ES5",
         "lib": [
             "es6",
             "es7",
@@ -46,11 +46,11 @@
         "bin",
         ".awcache",
         ".happy**/*.*",
-        "node_modules",
+        "node_modules/**/*",
         "node_modules.disk"
     ],
     "awesomeTypescriptLoaderOptions": {
-        "useBabel": true,
+        "useBabel": false,
         "forkChecker": true,
         "useCache": true,
         "babelOptions": {
@@ -66,7 +66,7 @@
             ],
             "env": {
                 "development": {
-                    
+                
                 }
             }
         }
