everything is connected - finally
cleanup, tweaks and real release - ~4-7 days

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test-watch": "gulp compile-watch",
     "start": "./node_modules/.bin/cross-env HOT=1 NODE_ENV=development ./node_modules/.bin/electron ./bin/epictask-start.js",
     "postinstall": "node ./etc/scripts/post-install.js",
+    "epic-post-install": "./etc/scripts/post-install.js",
     "tsc-watch": "./node_modules/.bin/tsc --project tsconfig.json --watch",
     "compile": "gulp compile",
     "compile-watch": "babel-node ./etc/scripts/compile-watch.js",
@@ -102,11 +103,8 @@
         "module": "commonjs"
       }
     },
-  
     "scriptPreprocessor": "./node_modules/ts-jest/preprocessor.js",
     "testRegex": "packages\\/epic-tests.*AppStore\\.spec\\.(ts|tsx)$",
-  
-  
     "setupFiles": [
       "etc/mocha/test-setup.js"
     ],
@@ -120,6 +118,9 @@
       "js"
     ]
   },
+  "engines": {
+    "electron": "1.4.3"
+  },
   "devDependencies": {
     "@kadira/storybook": "^2.5.2",
     "@types/electron": "^1.3.20",
@@ -129,6 +130,7 @@
     "@types/jquery": "^2.0.33",
     "@types/lodash": "^4.14.34",
     "@types/lunr": "^0.5.27",
+    "@types/msgpack-lite": "^0.1.1",
     "@types/node": "^6.0.38",
     "@types/node-uuid": "0.0.27",
     "@types/radium": "^0.17.18",
@@ -167,10 +169,7 @@
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.8.0",
-    "chai": "^3.5.0",
     "chalk": "^1.1.3",
-    "child": "0.0.3",
-    "chromedriver": "^2.21.2",
     "circular-dependency-plugin": "^2.0.0",
     "commander": "^2.9.0",
     "concurrently": "^2.1.0",
@@ -186,9 +185,7 @@
     "electron-debug": "^1.0.1",
     "electron-devtools-installer": "^2.0.0",
     "eslint": "^3.2.2",
-    "expectations": "^0.5.2",
     "exports-loader": "^0.6.3",
-    "express": "^4.13.4",
     "extract-text-webpack-plugin": "^1.0.1",
     "faker": "^3.1.0",
     "file-loader": "^0.8.5",
@@ -208,12 +205,9 @@
     "immutable-devtools": "0.0.7",
     "jade-loader": "^0.8.0",
     "jest": "^16.0.2",
-    "jsdom": "^9.1.0",
     "json-loader": "^0.5.4",
     "loader-utils": "^0.2.15",
     "merge2": "^1.0.2",
-    "mocha": "^2.4.5",
-    "mocha-junit-reporter": "^1.11.1",
     "nock": "^8.0.0",
     "node-sass": "^3.7.0",
     "node-uuid": "^1.4.7",
@@ -223,7 +217,6 @@
     "postcss-loader": "^0.9.1",
     "postcss-modules": "^0.5.0",
     "pug": ">=2.0.0-beta6",
-    "pug-html-loader": "^1.0.8",
     "pug-loader": "^2.3.0",
     "raw-loader": "^0.5.1",
     "react-addons-perf": "15.3.0",
@@ -232,12 +225,7 @@
     "react-transform-hmr": "^1.0.4",
     "reactotron-react-js": "^1.0.0",
     "reactotron-redux": "^1.0.0",
-    "redux-devtools": "^3.3.1",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-inspector": "^0.5.1",
-    "redux-devtools-log-monitor": "^1.0.11",
     "redux-logger": "^2.6.1",
-    "redux-slider-monitor": "^1.0.5",
     "remote-redux-devtools": "^0.3.3",
     "run-sequence": "^1.1.5",
     "sass-loader": "^4.0.0",
@@ -248,14 +236,12 @@
     "sinon": "^1.17.4",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
-    "sync-files": "^1.0.3",
     "ts-jest": "^0.1.8",
     "ts-loader": "^0.9.5",
     "tslint": "^3.13.0",
     "typescript": "2.1.0-dev.20161015",
-    "typestore-mocks": "^0.2.18",
+    "typestore-mocks": "^0.2.19",
     "url-loader": "^0.5.7",
-    "vinyl-named": "^1.1.0",
     "warning": "^3.0.0",
     "webpack": "^2.1.0-beta.25",
     "webpack-dashboard": "^0.1.8",
@@ -271,7 +257,6 @@
     "babel-polyfill": "^6.8.0",
     "babel-runtime": "^6.11.6",
     "bluebird": "^3.4.0",
-    "css-modules-require-hook": "^4.0.0",
     "dataurl": "^0.1.0",
     "electron-window-state": "^3.0.3",
     "events": "^1.1.1",
@@ -288,6 +273,7 @@
     "material-ui": "https://github.com/densebrain/material-ui/releases/download/latest/densebrain-material-ui-latest.tgz",
     "mkdirp": "^0.5.1",
     "moment": "^2.13.0",
+    "msgpack-lite": "^0.1.26",
     "node-fetch": "^1.5.3",
     "node-ipc": "^8.1.0",
     "node-uuid": "^1.4.7",
@@ -329,8 +315,8 @@
     "typeguard": "0.0.4",
     "typelogger": ">=1.0.25",
     "typescript-ioc": "^0.2.3",
-    "typestore": "^0.2.18",
-    "typestore-plugin-pouchdb": "^0.2.18",
+    "typestore": "^0.2.19",
+    "typestore-plugin-pouchdb": "^0.2.19",
     "typetransform": "^0.0.3",
     "urlsearchparams": "densebrain/URLSearchParams",
     "utf8-encoding": "^0.1.2",
