--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,7 @@
         "baseUrl": "./packages",
         "typeRoots": [
             "./node_modules/@types",
+            "./typings/epictask",
             "./typings/globals",
             "./typings/modules"
         ],
