--- a/package.json
+++ b/package.json
@@ -221,7 +221,7 @@
     "raw-loader": "^0.5.1",
     "react-addons-perf": "15.3.0",
     "react-addons-test-utils": "^15.3.0",
-    "react-hot-loader": "^3.0.0-beta.3",
+    "react-hot-loader": "^3.0.0-beta.6",
     "react-transform-hmr": "^1.0.4",
     "reactotron-react-js": "^1.0.0",
     "reactotron-redux": "^1.0.0",
@@ -289,6 +289,7 @@
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "15.3.0",
+    "react-hot-loader": "3.0.0-beta.6",
     "react-ink": "^5.1.1",
     "react-markdown": "densebrain/react-markdown",
     "react-proxy": "^2.0.8",
@@ -312,12 +313,12 @@
     "stacktrace-js": "^1.3.1",
     "tinycolor2": "^1.3.0",
     "typedux": ">=0.1.12",
-    "typeguard": "0.0.4",
+    "typeguard": "0.0.5",
     "typelogger": ">=1.0.25",
     "typescript-ioc": "^0.2.3",
     "typestore": "^0.2.19",
     "typestore-plugin-pouchdb": "^0.2.19",
-    "typetransform": "^0.0.3",
+    "typetransform": "0.0.14",
     "urlsearchparams": "densebrain/URLSearchParams",
     "utf8-encoding": "^0.1.2",
     "winston": "^2.2.0"
