--- a/package.json
+++ b/package.json
@@ -241,6 +241,7 @@
     "tslint": "^3.13.0",
     "typescript": "2.1.0-dev.20161015",
     "typestore-mocks": "^0.2.19",
+    "typetransform": "0.0.15",
     "url-loader": "^0.5.7",
     "warning": "^3.0.0",
     "webpack": "^2.1.0-beta.25",
@@ -317,8 +318,9 @@
     "typeguard": "0.0.5",
     "typelogger": ">=1.0.25",
     "typescript-ioc": "^0.2.3",
-    "typestore": "^0.2.19",
-    "typestore-plugin-pouchdb": "^0.2.19",
+    "typestore": "^0.2.20",
+    "typestore-mocks": "^0.2.20",
+    "typestore-plugin-pouchdb": "^0.2.20",
     "typetransform": "0.0.14",
     "urlsearchparams": "densebrain/URLSearchParams",
     "utf8-encoding": "^0.1.2",
