--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "faker": "^3.1.0",
+    "fb-watchman": "^1.9.0",
     "file-loader": "^0.8.5",
     "glob-promise": "^1.0.6",
     "gulp": "^3.9.1",
