--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "babel-core": "^6.13.1",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-runtime": "^6.8.0",
     "babel-polyfill": "^6.8.0",
     "babel-preset-async-to-bluebird": "^1.1.0",
@@ -220,8 +221,8 @@
     "pug": ">=2.0.0-beta6",
     "pug-loader": "^2.3.0",
     "raw-loader": "^0.5.1",
-    "react-addons-perf": "15.3.0",
-    "react-addons-test-utils": "^15.3.0",
+    "react-addons-perf": "15.3.2",
+    "react-addons-test-utils": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-transform-hmr": "^1.0.4",
     "reactotron-react-js": "^1.0.0",
@@ -281,22 +282,22 @@
     "node-uuid": "^1.4.7",
     "pouchdb-browser": "^6.0.7",
     "radium": "^0.18.1",
-    "react": "15.3.0",
-    "react-addons-create-fragment": "15.3.0",
-    "react-addons-css-transition-group": "15.3.0",
-    "react-addons-pure-render-mixin": "15.3.0",
-    "react-addons-shallow-compare": "15.3.0",
-    "react-addons-transition-group": "15.3.0",
+    "react": "15.3.2",
+    "react-addons-create-fragment": "15.3.2",
+    "react-addons-css-transition-group": "15.3.2",
+    "react-addons-pure-render-mixin": "15.3.2",
+    "react-addons-shallow-compare": "15.3.2",
+    "react-addons-transition-group": "15.3.2",
     "react-animate.css": "0.0.4",
     "react-component-resizable": "1.0.0",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "15.3.0",
+    "react-dom": "15.3.2",
     "react-hot-loader": "3.0.0-beta.6",
     "react-ink": "^5.1.1",
     "react-markdown": "densebrain/react-markdown",
     "react-proxy": "^2.0.8",
-    "react-redux": "^4.4.5",
+    "react-redux": "^5.0.0-beta.3",
     "react-simplemde-editor": "=3.0.0",
     "react-split-pane": "^0.1.44",
     "react-tap-event-plugin": "^1.0.0",
