--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
             "es2017",
             "dom"
         ],
-        "module": "commonjs",
+        "module": "ES6",
         "moduleResolution": "node",
         "declaration": false,
         "emitDecoratorMetadata": true,
@@ -61,9 +61,7 @@
         "cacheDirectory": "dist/.awcache",
         "babelOptions": {
             "presets": [
-                "es2016-node5",
-                "stage-0",
-                "react"
+                "stage-0"
             ],
             "sourceMaps": "both",
             "plugins": [
@@ -74,13 +72,9 @@
                     "plugins": [["react-transform", {
                         "transforms": [{
                             "transform": "react-transform-hmr",
-                            // if you use React Native, pass "react-native" instead:
                             "imports": ["react"],
-                            // this is important for Webpack HMR:
                             "locals": ["module"]
                         }]
-                        // note: you can put more transforms into array
-                        // this is just one of them!
                     }]]
                 }
             }
