--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "target": "ES6",
+        "target": "ES5",
         "lib": [
             "es6",
             "es7",
@@ -9,7 +9,7 @@
             "es2017",
             "dom"
         ],
-        "module": "ES6",
+        "module": "commonjs",
         "moduleResolution": "node",
         "declaration": false,
         "emitDecoratorMetadata": true,
