--- a/package.json
+++ b/package.json
@@ -181,7 +181,7 @@
     "debug-menu": "^0.4.0",
     "del": "^2.2.0",
     "devtron": "^1.3.0",
-    "electron": "1.4.3",
+    "electron": "1.4.6",
     "electron-builder": "^7.11.2",
     "electron-debug": "^1.0.1",
     "electron-devtools-installer": "^2.0.0",
@@ -221,7 +221,7 @@
     "pug": ">=2.0.0-beta6",
     "pug-loader": "^2.3.0",
     "raw-loader": "^0.5.1",
-    "react-addons-perf": "15.3.2",
+    "react-addons-perf": "^15.3.2",
     "react-addons-test-utils": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-transform-hmr": "^1.0.4",
@@ -282,18 +282,18 @@
     "node-uuid": "^1.4.7",
     "pouchdb-browser": "^6.0.7",
     "radium": "^0.18.1",
-    "react": "15.3.2",
-    "react-addons-create-fragment": "15.3.2",
-    "react-addons-css-transition-group": "15.3.2",
-    "react-addons-pure-render-mixin": "15.3.2",
-    "react-addons-shallow-compare": "15.3.2",
-    "react-addons-transition-group": "15.3.2",
+    "react": "^15.3.2",
+    "react-addons-create-fragment": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
+    "react-addons-pure-render-mixin": "^15.3.2",
+    "react-addons-shallow-compare": "^15.3.2",
+    "react-addons-transition-group": "^15.3.2",
     "react-animate.css": "0.0.4",
-    "react-component-resizable": "1.0.0",
+    "react-component-resizable": "^1.1.0-rc1",
     "react-deep-force-update": "^2.0.1",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "15.3.2",
+    "react-dom": "^15.3.2",
     "react-hot-loader": "3.0.0-beta.6",
     "react-ink": "^5.1.1",
     "react-markdown": "densebrain/react-markdown",
@@ -302,7 +302,7 @@
     "react-simplemde-editor": "=3.0.0",
     "react-split-pane": "^0.1.44",
     "react-tap-event-plugin": "^1.0.0",
-    "react-textfit": "^0.1.8",
+    "react-textfit": "https://github.com/densebrain/react-textfit",
     "react-timeout": "^1.0.0",
     "react-valid-props": "^1.0.10",
     "recompose": "^0.20.2",
@@ -321,7 +321,7 @@
     "typeguard": "0.0.5",
     "typelogger": ">=1.0.25",
     "typescript-ioc": "^0.2.3",
-    "typestore": "^0.2.20",
+    "typestore": "^0.2.23",
     "typestore-mocks": "^0.2.20",
     "typestore-plugin-pouchdb": "^0.2.20",
     "typetransform": "0.0.15",
