--- a/package.json
+++ b/package.json
@@ -205,7 +205,6 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.17.0",
     "immutable-devtools": "0.0.7",
-    "jade-loader": "^0.8.0",
     "jest": "^16.0.2",
     "json-loader": "^0.5.4",
     "loader-utils": "^0.2.15",
@@ -302,7 +301,7 @@
     "react-simplemde-editor": "=3.0.0",
     "react-split-pane": "^0.1.44",
     "react-tap-event-plugin": "^1.0.0",
-    "react-textfit": "https://github.com/densebrain/react-textfit",
+    "react-textfit": "https://github.com/densebrain/react-textfit/releases/download/0.1.9/react-textfit-0.1.9.tgz",
     "react-timeout": "^1.0.0",
     "react-valid-props": "^1.0.10",
     "recompose": "^0.20.2",
