- inline editing - custom text field - tooltips ++++

--- a/package.json
+++ b/package.json
@@ -5,23 +5,21 @@
   "main": "bin/epictask-start.js",
   "scripts": {
     "clean": "node ./etc/scripts/clean.js",
-    "clean-electron-workspace": "node ./etc/scripts/clean-dev-electron.js",
+    "dev:clean-workspace": "node ./etc/scripts/clean-dev-electron.js",
+    "dev:storybook": "./etc/scripts/configure-dev-env.sh && start-storybook -s ./ -p 6006",
+    "dev:storybook-build": "build-storybook",
+    "dev:kill": "pkill -9 Electron || pkill -9 electron",
+    "dev:watch-workspace": "babel-node ./etc/scripts/watch/watch-workspace.js",
     "test": "gulp compile test",
-    "test-watch": "gulp compile-watch",
+    "test:watch": "gulp compile-watch",
     "start": "./node_modules/.bin/cross-env HOT=1 NODE_ENV=development ./node_modules/.bin/electron ./bin/epictask-start.js",
-    "postinstall": "node ./etc/scripts/post-install.js",
-    "epic-post-install": "./etc/scripts/post-install.js",
-    "tsc-watch": "./node_modules/.bin/tsc --project tsconfig.json --watch",
     "compile": "gulp compile",
-    "compile-watch": "babel-node ./etc/scripts/compile-watch.js",
+    "compile:watch": "babel-node ./etc/scripts/compile-watch.js",
     "package": "babel-node ./etc/scripts/package.js",
-    "package-all": "babel-node ./etc/scripts/package.js --win --linux",
-    "make-icons": "babel-node ./etc/scripts/make-icons.js",
-    "install-material-ui": "npm i material-ui@../material-ui/build",
-    "install-app": "babel-node ./etc/scripts/package.js --install",
-    "storybook": "./etc/scripts/configure-dev-env.sh && start-storybook -s ./ -p 6006",
-    "build-storybook": "build-storybook",
-    "kill-electron": "pkill -9 Electron || pkill -9 electron"
+    "package:all": "babel-node ./etc/scripts/package.js --win --linux",
+    "package:make-icons": "babel-node ./etc/scripts/make-icons.js",
+    "install:material-ui": "npm i material-ui@../material-ui/build",
+    "install:app": "babel-node ./etc/scripts/package.js --install"
   },
   "build": {
     "appId": "com.densebrain.epictask",
@@ -304,6 +302,7 @@
     "react-tap-event-plugin": "^1.0.0",
     "react-textfit": "https://github.com/densebrain/react-textfit",
     "react-timeout": "^1.0.0",
+    "react-tooltip": "^3.2.2",
     "react-valid-props": "^1.0.10",
     "recompose": "^0.20.2",
     "redux": "^3.5.2",
