--- a/package.json
+++ b/package.json
@@ -123,16 +123,16 @@
   "devDependencies": {
     "@kadira/storybook": "^2.5.2",
     "@types/electron": "^1.3.20",
-    "@types/faker": "0.0.29",
+    "@types/faker": "3.1.32",
     "@types/history": "^2.0.35",
-    "@types/jest": "^15.1.32",
+    "@types/jest": "^16.0.0",
     "@types/jquery": "^2.0.33",
     "@types/lodash": "^4.14.34",
     "@types/lunr": "^0.5.27",
     "@types/msgpack-lite": "^0.1.1",
     "@types/node": "^6.0.38",
-    "@types/node-uuid": "0.0.27",
-    "@types/radium": "^0.17.18",
+    "@types/node-uuid": "0.0.28",
+    "@types/radium": "^0.18.19",
     "@types/react": "^0.14.34",
     "@types/react-addons-css-transition-group": "^0.14.16",
     "@types/react-addons-perf": "^0.14.16",
@@ -153,12 +153,12 @@
     "@types/source-map-support": "^0.2.27",
     "asar": "^0.12.1",
     "autoprefixer": "^6.3.7",
-    "awesome-typescript-loader": "2.2.4",
+    "awesome-typescript-loader": "^2.2.4",
     "aws-sdk": "^2.6.9",
     "aws-sdk-typescript": "github:densebrain/aws-sdk-typescript#v0.0.4",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.1",
-    "babel-eslint": "^6.0.4",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.4",
     "babel-plugin-react-transform": "^2.0.2",
     "babel-plugin-transform-runtime": "^6.8.0",
@@ -172,16 +172,16 @@
     "chalk": "^1.1.3",
     "circular-dependency-plugin": "^2.0.0",
     "commander": "^2.9.0",
-    "concurrently": "^2.1.0",
+    "concurrently": "^3.1.0",
     "copy-webpack-plugin": "^4.0.0",
-    "cross-env": "^1.0.7",
-    "css-loader": "^0.23.1",
+    "cross-env": "^3.1.3",
+    "css-loader": "^0.26.0",
     "debug": "^2.2.0",
     "debug-menu": "^0.4.0",
     "del": "^2.2.0",
     "devtron": "^1.3.0",
-    "electron": "1.4.6",
-    "electron-builder": "^7.11.2",
+    "electron": "1.4.8",
+    "electron-builder": "^8.6.0",
     "electron-debug": "^1.0.1",
     "electron-devtools-installer": "^2.0.0",
     "eslint": "^3.2.2",
@@ -189,32 +189,32 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "faker": "^3.1.0",
     "fb-watchman": "^1.9.0",
-    "file-loader": "^0.8.5",
-    "glob-promise": "^1.0.6",
+    "file-loader": "^0.9.0",
+    "glob-promise": "^2.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "gulp-debug": "^2.1.2",
+    "gulp-debug": "^3.0.0",
     "gulp-electron-mocha": "^1.2.3",
     "gulp-git": "^1.7.1",
     "gulp-github-release": "^1.1.5",
-    "gulp-mocha": "^2.2.0",
+    "gulp-mocha": "^3.0.1",
     "gulp-sourcemaps": "^2.0.0-alpha",
     "gulp-util": "^3.0.7",
     "hapi": "^15.1.1",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.17.0",
     "immutable-devtools": "0.0.7",
-    "jest": "^16.0.2",
+    "jest": "^17.0.3",
     "json-loader": "^0.5.4",
     "loader-utils": "^0.2.15",
     "merge2": "^1.0.2",
-    "nock": "^8.0.0",
+    "nock": "^9.0.2",
     "node-sass": "^3.7.0",
     "node-uuid": "^1.4.7",
-    "normalize.css": "^4.1.1",
+    "normalize.css": "^5.0.0",
     "postcss": "^5.0.21",
     "postcss-js": "^0.1.3",
-    "postcss-loader": "^0.9.1",
+    "postcss-loader": "^1.1.1",
     "postcss-modules": "^0.5.0",
     "pug": ">=2.0.0-beta6",
     "pug-loader": "^2.3.0",
@@ -226,7 +226,7 @@
     "reactotron-react-js": "^1.0.0",
     "reactotron-redux": "^1.0.0",
     "redux-logger": "^2.6.1",
-    "remote-redux-devtools": "^0.3.3",
+    "remote-redux-devtools": "^0.5.4",
     "run-sequence": "^1.1.5",
     "sass-loader": "^4.0.0",
     "script-loader": "^0.7.0",
@@ -236,16 +236,16 @@
     "sinon": "^1.17.4",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
-    "ts-jest": "^0.1.8",
-    "ts-loader": "^0.9.5",
-    "tslint": "^3.13.0",
+    "ts-jest": "^17.0.0",
+    "ts-loader": "^1.2.2",
+    "tslint": "^4.0.2",
     "typescript": "2.1.0-dev.20161015",
     "typestore-mocks": "^0.2.23",
-    "typetransform": "0.0.15",
+    "typetransform": "0.0.16",
     "url-loader": "^0.5.7",
     "warning": "^3.0.0",
     "webpack": "^2.1.0-beta.25",
-    "webpack-dashboard": "^0.1.8",
+    "webpack-dashboard": "^0.2.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^2.1.0-beta.0",
     "webpack-hot-middleware": "^2.12.2",
@@ -259,16 +259,16 @@
     "babel-runtime": "^6.11.6",
     "bluebird": "^3.4.0",
     "dataurl": "^0.1.0",
-    "electron-window-state": "^3.0.3",
+    "electron-window-state": "^4.0.0",
     "events": "^1.1.1",
     "font-awesome": "^4.6.3",
-    "form-data": "^1.0.0-rc4",
-    "free-style": "^1.2.2",
+    "form-data": "^2.1.2",
+    "free-style": "^2.0.0",
     "glob": "^7.0.3",
     "gsap": "^1.19.0",
     "highlight.js": "^9.4.0",
     "immutable": "^3.8.1",
-    "jquery": "^2.2.4",
+    "jquery": "^3.1.1",
     "later": "^1.2.0",
     "lodash": "^4.12.0",
     "material-ui": "https://github.com/densebrain/material-ui/releases/download/latest/densebrain-material-ui-latest.tgz",
@@ -297,10 +297,10 @@
     "react-markdown": "densebrain/react-markdown",
     "react-proxy": "^2.0.8",
     "react-redux": "^5.0.0-beta.3",
-    "react-simplemde-editor": "=3.0.0",
+    "react-simplemde-editor": "=3.6.4",
     "react-split-pane": "^0.1.44",
-    "react-tap-event-plugin": "^1.0.0",
-    "react-textfit": "https://github.com/densebrain/react-textfit",
+    "react-tap-event-plugin": "^2.0.1",
+    "react-textfit": "https://github.com/densebrain/react-textfit/releases/download/v0.1.11/react-textfit-0.1.11.tgz",
     "react-timeout": "^1.0.0",
     "react-tooltip": "^3.2.2",
     "react-valid-props": "^1.0.10",
@@ -317,12 +317,12 @@
     "stacktrace-js": "^1.3.1",
     "tinycolor2": "^1.3.0",
     "typedux": ">=0.1.12",
-    "typeguard": "0.0.5",
+    "typeguard": "0.0.6",
     "typelogger": ">=1.0.25",
     "typescript-ioc": "^0.2.3",
     "typestore": "^0.2.23",
     "typestore-plugin-pouchdb": "^0.2.23",
-    "typetransform": "0.0.15",
+    "typetransform": "0.0.16",
     "urlsearchparams": "densebrain/URLSearchParams",
     "utf8-encoding": "^0.1.2",
     "winston": "^2.2.0"
