--- a/package.json
+++ b/package.json
@@ -309,6 +309,7 @@
     "redux-thunk": "^2.1.0",
     "reflect-metadata": "^0.1.8",
     "reselect": "^2.5.3",
+    "search-query-parser": "^1.3.0",
     "shelljs": "^0.7.0",
     "short-id": "0.1.0-1",
     "simplemde": "^1.10.1",
