--- a/package.json
+++ b/package.json
@@ -298,6 +298,7 @@
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.3.2",
+    "react-event-listener": "^0.4.0",
     "react-hot-loader": "3.0.0-beta.6",
     "react-ink": "^5.1.1",
     "react-markdown": "densebrain/react-markdown",
