- build is successful

--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "awesome-typescript-loader": "^2.2.4",
     "aws-sdk": "^2.6.9",
     "aws-sdk-typescript": "github:densebrain/aws-sdk-typescript#v0.0.4",
+    "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.1",
     "babel-eslint": "^7.1.1",
@@ -270,6 +271,7 @@
     "font-awesome": "^4.6.3",
     "form-data": "^2.1.2",
     "free-style": "^2.0.0",
+    "generic-pool": "^3.1.4",
     "glob": "^7.0.3",
     "gsap": "^1.19.0",
     "highlight.js": "^9.4.0",
