--- a/package.json
+++ b/package.json
@@ -325,7 +325,7 @@
     "short-id": "0.1.0-1",
     "simplemde": "^1.10.1",
     "sinon": "^1.17.4",
-    "source-map-support": "^0.4.0",
+    "source-map-support": "0.4.3",
     "stacktrace-js": "^1.3.1",
     "tinycolor2": "^1.3.0",
     "typedux": ">=0.1.12",
