--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "jest  --no-cache",
     "test:watch": "jest --watch  --no-cache",
     "start": "./node_modules/.bin/cross-env DEBUG=1 HOT=1 NODE_ENV=development ./node_modules/.bin/electron ./bin/epictask-start.js",
-    "compile": "gulp compile",
+    "compile": "babel-node ./etc/scripts/compile.js",
     "compile:watch": "babel-node ./etc/scripts/compile-watch.js",
     "package": "babel-node ./etc/scripts/package.js",
     "package:all": "babel-node ./etc/scripts/package.js --win --linux",
