--- a/package.json
+++ b/package.json
@@ -253,7 +253,7 @@
     "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony",
     "url-loader": "^0.5.7",
     "warning": "^3.0.0",
-    "webpack": "^2.1.0-beta.25",
+    "webpack": "^2.1.0-beta.27",
     "webpack-dashboard": "^0.2.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-dev-server": "^2.1.0-beta.0",
@@ -289,6 +289,8 @@
     "node-ipc": "^8.1.0",
     "node-uuid": "^1.4.7",
     "pouchdb-browser": "^6.0.7",
+    "pouchdb-find": "^0.10.3",
+    "pouchdb-quick-search": "^1.2.0",
     "radium": "^0.18.1",
     "react": "^15.3.2",
     "react-addons-create-fragment": "^15.3.2",
