--- a/package.json
+++ b/package.json
@@ -161,7 +161,7 @@
     "@types/source-map-support": "^0.2.27",
     "asar": "^0.12.1",
     "autoprefixer": "^6.3.7",
-    "awesome-typescript-loader": "^2.2.4",
+    "awesome-typescript-loader": "^3.0.0-beta.10",
     "aws-sdk": "^2.6.9",
     "aws-sdk-typescript": "github:densebrain/aws-sdk-typescript#v0.0.4",
     "babel-cli": "^6.11.4",
@@ -248,7 +248,7 @@
     "ts-jest": "^17.0.0",
     "ts-loader": "^1.2.2",
     "tslint": "^4.0.2",
-    "typescript": "2.1.0-dev.20161015",
+    "typescript": "^2.1.4",
     "typestore-mocks": "^0.2.23",
     "typetransform": "0.0.16",
     "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony",
@@ -331,9 +331,11 @@
     "source-map-support": "0.4.3",
     "stacktrace-js": "^1.3.1",
     "tinycolor2": "^1.3.0",
+    "type-enum-events": "^1.0.5",
     "typedux": ">=0.1.12",
     "typeguard": "0.0.6",
     "typelogger": ">=1.0.25",
+    "typepool": "^1.0.8",
     "typescript-ioc": "^0.2.3",
     "typestore": "^0.2.23",
     "typestore-plugin-pouchdb": "^0.2.23",
