--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
   },
   "devDependencies": {
     "@kadira/storybook": "^2.5.2",
+    "@types/chrome": "0.0.36",
     "@types/electron": "^1.3.20",
     "@types/faker": "3.1.32",
     "@types/history": "^2.0.35",
