--- a/package.json
+++ b/package.json
@@ -267,6 +267,7 @@
   },
   "dependencies": {
     "@exponent/electron-cookies": "^2.0.0",
+    "@types/howler": "^2.0.0",
     "animate.css": "^3.5.1",
     "babel-polyfill": "^6.8.0",
     "babel-runtime": "^6.11.6",
@@ -281,6 +282,7 @@
     "glob": "^7.0.3",
     "gsap": "^1.19.0",
     "highlight.js": "^9.4.0",
+    "howler": "^2.0.2",
     "immutable": "^3.8.1",
     "jquery": "^3.1.1",
     "later": "^1.2.0",
