added sound files
FINALLY created a simple tooltip construct that will in the future be a base for a complex component based solution

--- a/package.json
+++ b/package.json
@@ -230,8 +230,8 @@
     "pug": ">=2.0.0-beta6",
     "pug-loader": "^2.3.0",
     "raw-loader": "^0.5.1",
-    "react-addons-perf": "^15.3.2",
-    "react-addons-test-utils": "^15.3.2",
+    "react-addons-perf": "^15.4.1",
+    "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-transform-hmr": "^1.0.4",
     "reactotron-cli": "^1.6.0",
@@ -271,6 +271,7 @@
     "animate.css": "^3.5.1",
     "babel-polyfill": "^6.8.0",
     "babel-runtime": "^6.11.6",
+    "balloon-css": "^0.4.0",
     "bluebird": "^3.4.0",
     "dataurl": "^0.1.0",
     "electron-window-state": "^4.0.0",
@@ -298,18 +299,18 @@
     "pouchdb-find": "^0.10.3",
     "pouchdb-quick-search": "^1.2.0",
     "radium": "^0.18.1",
-    "react": "^15.3.2",
-    "react-addons-create-fragment": "^15.3.2",
-    "react-addons-css-transition-group": "^15.3.2",
-    "react-addons-pure-render-mixin": "^15.3.2",
-    "react-addons-shallow-compare": "^15.3.2",
-    "react-addons-transition-group": "^15.3.2",
+    "react": "^15.4.1",
+    "react-addons-create-fragment": "^15.4.1",
+    "react-addons-css-transition-group": "^15.4.1",
+    "react-addons-pure-render-mixin": "^15.4.1",
+    "react-addons-shallow-compare": "^15.4.1",
+    "react-addons-transition-group": "^15.4.1",
     "react-animate.css": "0.0.4",
     "react-component-resizable": "^1.1.0-rc1",
     "react-deep-force-update": "^2.0.1",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^15.3.2",
+    "react-dom": "^15.4.1",
     "react-event-listener": "^0.4.0",
     "react-hot-loader": "3.0.0-beta.6",
     "react-ink": "^5.1.1",
@@ -322,7 +323,7 @@
     "react-textfit": "https://github.com/densebrain/react-textfit/releases/download/v0.1.11/react-textfit-0.1.11.tgz",
     "react-timeout": "^1.0.0",
     "react-tooltip": "^3.2.2",
-    "react-valid-props": "^1.0.10",
+    "react-valid-props": "^1.0.11",
     "recompose": "^0.20.2",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0",
