--- a/package.json
+++ b/package.json
@@ -279,6 +279,7 @@
     "bluebird": "^3.4.0",
     "dataurl": "^0.1.0",
     "decompress": "^4.0.0",
+    "dropbox": "^2.5.0",
     "electron-window-state": "^4.0.0",
     "events": "^1.1.1",
     "font-awesome": "^4.6.3",
