--- a/package.json
+++ b/package.json
@@ -139,12 +139,12 @@
     "@types/history": "^2.0.35",
     "@types/jest": "^16.0.0",
     "@types/jquery": "^2.0.33",
-    "@types/lodash": "^4.14.34",
+    "@types/lodash": "^4.14.53",
     "@types/lunr": "^0.5.27",
     "@types/msgpack-lite": "^0.1.1",
     "@types/node": "^6.0.38",
     "@types/radium": "^0.18.19",
-    "@types/react": "^0.14.34",
+    "@types/react": "^15.0.12",
     "@types/react-addons-css-transition-group": "^0.14.16",
     "@types/react-addons-perf": "^0.14.16",
     "@types/react-addons-pure-render-mixin": "^0.14.13",
@@ -152,7 +152,7 @@
     "@types/react-addons-transition-group": "^0.14.16",
     "@types/react-dnd": "^2.0.31",
     "@types/react-dnd-html5-backend": "^2.1.4",
-    "@types/react-dom": "^0.14.16",
+    "@types/react-dom": "^0.14.23",
     "@types/react-modal": "^1.3.4",
     "@types/react-redux": "^4.4.31",
     "@types/react-router": "^2.0.33",
@@ -164,7 +164,7 @@
     "@types/source-map-support": "^0.2.27",
     "asar": "^0.12.1",
     "autoprefixer": "^6.3.7",
-    "awesome-typescript-loader": "^3.0.0-beta.18",
+    "awesome-typescript-loader": "^3.0.7",
     "aws-sdk": "^2.6.9",
     "aws-sdk-typescript": "github:densebrain/aws-sdk-typescript#v0.0.4",
     "babel-cli": "^6.11.4",
@@ -215,7 +215,7 @@
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.17.0",
     "immutable-devtools": "0.0.7",
-    "jest": "^18.1.0",
+    "jest": "^19.0.2",
     "jest-cli": "^17.0.3",
     "json-loader": "^0.5.4",
     "loader-utils": "^0.2.15",
@@ -231,8 +231,8 @@
     "pug": ">=2.0.0-beta6",
     "pug-loader": "^2.3.0",
     "raw-loader": "^0.5.1",
-    "react-addons-perf": "^15.4.1",
-    "react-addons-test-utils": "^15.4.1",
+    "react-addons-perf": "^15.4.2",
+    "react-addons-test-utils": "^15.4.2",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-transform-hmr": "^1.0.4",
     "reactotron-cli": "^1.6.0",
@@ -249,20 +249,20 @@
     "sinon": "^1.17.4",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
-    "ts-jest": "^18.0.2",
+    "ts-jest": "^19.0.0",
     "ts-loader": "^1.2.2",
     "tslint": "^4.0.2",
-    "typescript": "^2.1.4",
+    "typescript": "^2.3.0-dev.20170225",
     "typestore-mocks": "^0.2.23",
     "typetransform": "0.0.16",
     "uglify-js": "git+https://github.com/mishoo/UglifyJS2.git#harmony",
     "url-loader": "^0.5.7",
     "warning": "^3.0.0",
-    "webpack": "^2.2.0-rc.5",
-    "webpack-dashboard": "^0.2.0",
+    "webpack": "^2.2.1",
+    "webpack-dashboard": "^0.3.0",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^2.1.0-beta.0",
-    "webpack-hot-middleware": "^2.12.2",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-hot-middleware": "^2.17.1",
     "webpack-node-externals": "^1.2.0",
     "webpack-stream": "^3.2.0"
   },
@@ -302,18 +302,18 @@
     "pouchdb-find": "^0.10.3",
     "pouchdb-quick-search": "^1.2.0",
     "radium": "^0.18.1",
-    "react": "^15.4.1",
-    "react-addons-create-fragment": "^15.4.1",
-    "react-addons-css-transition-group": "^15.4.1",
-    "react-addons-pure-render-mixin": "^15.4.1",
-    "react-addons-shallow-compare": "^15.4.1",
-    "react-addons-transition-group": "^15.4.1",
+    "react": "^15.4.2",
+    "react-addons-create-fragment": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
+    "react-addons-pure-render-mixin": "^15.4.2",
+    "react-addons-shallow-compare": "^15.4.2",
+    "react-addons-transition-group": "^15.4.2",
     "react-animate.css": "0.0.4",
     "react-component-resizable": "^1.1.0-rc1",
     "react-deep-force-update": "^2.0.1",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
-    "react-dom": "^15.4.1",
+    "react-dom": "^15.4.2",
     "react-event-listener": "^0.4.0",
     "react-hot-loader": "3.0.0-beta.6",
     "react-ink": "^5.1.1",
@@ -346,8 +346,9 @@
     "typelogger": ">=1.0.25",
     "typepool": "^1.0.8",
     "typescript-ioc": "^0.2.3",
-    "typestore": "^0.2.23",
-    "typestore-plugin-pouchdb": "^0.2.23",
+    "typestore": "^0.2.27",
+    "typestore-mocks": "^0.2.27",
+    "typestore-plugin-pouchdb": "^0.2.27",
     "typetransform": "0.0.16",
     "urlsearchparams": "densebrain/URLSearchParams",
     "utf8-encoding": "^0.1.2",
