--- a/package.json
+++ b/package.json
@@ -341,7 +341,7 @@
     "stacktrace-js": "^1.3.1",
     "tinycolor2": "^1.3.0",
     "type-enum-events": "^1.0.5",
-    "typedux": "file:///Users/jglanz/Development/densebrain/epictask-workspace/typedux",
+    "typedux": "^0.1.18",
     "typeguard": "0.0.12",
     "typelogger": ">=1.0.25",
     "typepool": "^1.0.8",
