--- a/package.json
+++ b/package.json
@@ -343,7 +343,7 @@
     "type-enum-events": "^1.0.5",
     "typedux": "^0.1.18",
     "typeguard": "0.0.12",
-    "typelogger": ">=1.0.25",
+    "typelogger": "^1.0.29",
     "typepool": "^1.0.8",
     "typescript-ioc": "^0.2.3",
     "typestore": "^0.2.27",
