--- a/tsconfig.json
+++ b/tsconfig.json
@@ -55,30 +55,9 @@
         "node_modules.disk"
     ],
     "awesomeTypescriptLoaderOptions": {
-        "useBabel": true,
         "forkChecker": true,
         "useCache": true,
-        "cacheDirectory": "dist/.awcache",
-        "babelOptions": {
-            "presets": [
-                "stage-0"
-            ],
-            "sourceMaps": "both",
-            "plugins": [
-                
-            ],
-            "env": {
-                "development": {
-                    "plugins": [["react-transform", {
-                        "transforms": [{
-                            "transform": "react-transform-hmr",
-                            "imports": ["react"],
-                            "locals": ["module"]
-                        }]
-                    }]]
-                }
-            }
-        }
+        "cacheDirectory": "dist/.awcache"
     }
     
 }
