--- a/package.json
+++ b/package.json
@@ -193,7 +193,7 @@
     "debug-menu": "^0.4.0",
     "del": "^2.2.0",
     "devtron": "^1.3.0",
-    "electron": "1.4.8",
+    "electron": "^1.6.1",
     "electron-builder": "^8.6.0",
     "electron-builder-squirrel-windows": "^15.0.0",
     "electron-debug": "^1.0.1",
@@ -325,6 +325,7 @@
     "react-proxy": "^2.0.8",
     "react-redux": "^5.0.0-beta.3",
     "react-simplemde-editor": "=3.6.4",
+    "react-spinkit": "^2.1.1",
     "react-split-pane": "^0.1.44",
     "react-tap-event-plugin": "^2.0.1",
     "react-textfit": "https://github.com/densebrain/react-textfit/releases/download/v0.1.11/react-textfit-0.1.11.tgz",
