--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "lodash": "^4.17.4",
+    "moment": "^2.23.0",
     "prelude-ts": "^0.8.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
