- epic task2 is coming along!

--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/polyfill": "^7.2.5",
     "@babel/runtime": "^7.1.5",
+    "@hot-loader/react-dom": "^16.7.0",
     "@material-ui/core": "^3.7.1",
     "@material-ui/icons": "^3.0.1",
+    "@material-ui/styles": "^3.0.0-alpha.4",
+    "@material-ui/utils": "^3.0.0-alpha.1",
     "@octokit/rest": "^16.3.0",
-    "@types/react-redux": "^6.0.11",
     "async-file": "^2.0.2",
     "axios": "^0.18.0",
     "babel-runtime": "^6.26.0",
+    "bluebird": "^3.5.3",
     "dexie": "^2.0.4",
     "dexie-observable": "^1.0.0-beta.5",
     "electron-context-menu": "^0.10.1",
@@ -20,10 +24,12 @@
     "electron-window-state": "^5.0.2",
     "history": "^4.7.2",
     "jquery": "^3.3.1",
+    "jss": "^9.8.7",
     "lodash": "^4.17.4",
     "moment": "^2.23.0",
     "prelude-ts": "^0.8.2",
     "react": "^16.6.3",
+    "react-container-dimensions": "^1.4.1",
     "react-dom": "^16.6.3",
     "react-image": "^1.5.1",
     "react-loadable": "^5.5.0",
@@ -32,12 +38,15 @@
     "react-router-redux": "^5.0.0-alpha.9",
     "react-select": "^2.1.2",
     "react-split-pane": "^0.1.85",
+    "react-virtualized": "^9.21.0",
+    "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "reflect-metadata": "^0.1.12",
     "reselect": "^4.0.0",
     "shelljs": "^0.8.1",
     "source-map-support": "^0.5.3",
+    "sugar": "^2.0.6",
     "tinycolor2": "^1.4.1",
     "type-enum-events": "^1.0.5",
     "typedux": "^2.0.11",
@@ -57,16 +66,19 @@
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
-    "@types/bluebird": "^2.0.0",
+    "@types/bluebird": "^3.5.25",
     "@types/geojson": "^7946.0.4",
     "@types/jest": "^22.1.2",
+    "@types/jss": "^9.5.7",
     "@types/lodash": "^4.14.119",
     "@types/node": "^10.12.18",
     "@types/react": "16.7.6",
     "@types/react-dom": "^16.0.3",
     "@types/react-loadable": "^5.4.2",
+    "@types/react-redux": "^6.0.11",
     "@types/react-router-redux": "^5.0.17",
     "@types/react-select": "^2.0.10",
+    "@types/react-virtualized": "^9.18.11",
     "@types/shelljs": "^0.7.8",
     "@types/webpack": "^3.8.3",
     "@types/webpack-env": "^1.13.3",
@@ -92,7 +104,7 @@
     "jest": "^22.1.4",
     "jest-localstorage-mock": "^2.2.0",
     "node-sass": "^4.9.3",
-    "react-hot-loader": "^4.3.12",
+    "react-hot-loader": "^4.6.3",
     "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.3",
