--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
     "@babel/runtime": "^7.1.5",
+    "@githubprimer/octicons-react": "^8.2.0",
     "@hot-loader/react-dom": "^16.7.0",
     "@material-ui/core": "^3.7.1",
     "@material-ui/icons": "^3.0.1",
@@ -27,17 +28,20 @@
     "jss": "^9.8.7",
     "lodash": "^4.17.4",
     "moment": "^2.23.0",
+    "moment-timezone": "^0.5.23",
     "prelude-ts": "^0.8.2",
     "react": "^16.6.3",
     "react-container-dimensions": "^1.4.1",
     "react-dom": "^16.6.3",
     "react-image": "^1.5.1",
     "react-loadable": "^5.5.0",
+    "react-moment": "^0.8.4",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-select": "^2.1.2",
     "react-split-pane": "^0.1.85",
+    "react-valid-props": "^1.0.12",
     "react-virtualized": "^9.21.0",
     "recompose": "^0.30.0",
     "redux": "^4.0.1",
@@ -45,6 +49,7 @@
     "reflect-metadata": "^0.1.12",
     "reselect": "^4.0.0",
     "shelljs": "^0.8.1",
+    "short-id": "0.1.0-1",
     "source-map-support": "^0.5.3",
     "sugar": "^2.0.6",
     "tinycolor2": "^1.4.1",
@@ -54,7 +59,7 @@
     "typelogger": "^1.0.29",
     "typetransform": "^0.0.20",
     "unzip": "^0.1.11",
-    "uuid": "^3.2.1"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
@@ -104,6 +109,7 @@
     "jest": "^22.1.4",
     "jest-localstorage-mock": "^2.2.0",
     "node-sass": "^4.9.3",
+    "raw-loader": "^1.0.0",
     "react-hot-loader": "^4.6.3",
     "react-test-renderer": "^16.2.0",
     "sass-loader": "^6.0.6",
